<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="k00364744.helloworld.tamuk.edu.calculator.MainActivity"
    android:background="#f62f3c"
    android:padding="0dp">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/init"
        android:id="@+id/output"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:background="#ffffff"
        android:gravity="bottom|right"
        android:textSize="70sp"
        android:textColor="#000000"
        android:maxLines="2"
        android:maxLength="24"
        android:layout_marginTop="75dp" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/one"
        android:id="@+id/button1"
        android:layout_below="@+id/output"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="0dp"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClick" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/two"
        android:id="@+id/button2"
        android:layout_below="@+id/output"
        android:layout_toRightOf="@+id/button1"
        android:layout_toEndOf="@+id/button1"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClick" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/three"
        android:id="@+id/button3"
        android:layout_below="@+id/output"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClick" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/add"
        android:id="@+id/signadd"
        android:layout_alignBottom="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onOperate" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/four"
        android:id="@+id/button4"
        android:layout_below="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClick" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/five"
        android:id="@+id/button5"
        android:layout_below="@+id/button2"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClick" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/six"
        android:id="@+id/button6"
        android:layout_below="@+id/button3"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClick" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/sub"
        android:id="@+id/signsub"
        android:layout_below="@+id/button3"
        android:layout_toRightOf="@+id/button6"
        android:layout_toEndOf="@+id/button6"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onOperate" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/nine"
        android:id="@+id/button9"
        android:layout_below="@+id/button5"
        android:layout_toRightOf="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClick" />

    <Button
        android:layout_width="121dp"
        android:layout_height="70dp"
        android:text="@string/mul"
        android:id="@+id/signmul"
        android:layout_below="@+id/button6"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onOperate" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/seven"
        android:id="@+id/button7"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClick" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/eight"
        android:id="@+id/button8"
        android:layout_below="@+id/button4"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClick" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/eq"
        android:id="@+id/signeq"
        android:layout_below="@+id/button9"
        android:layout_toRightOf="@+id/button0"
        android:layout_toEndOf="@+id/button0"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onCalculate" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/clear"
        android:id="@+id/reset"
        android:layout_below="@+id/button7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClickClear" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/zero"
        android:id="@+id/button0"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onClick"
        android:layout_below="@+id/button9"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7" />

    <Button
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:text="@string/div"
        android:id="@+id/signdiv"
        android:layout_below="@+id/button9"
        android:layout_toRightOf="@+id/signeq"
        android:layout_toEndOf="@+id/signeq"
        android:gravity="center"
        android:textColor="#0e0e0e"
        android:textSize="30sp"
        android:background="#b8b8b8"
        android:onClick="onOperate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/KID"
        android:id="@+id/kid"
        android:textColor="#060606"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#06f6ca"
        android:textAlignment="center"
        android:paddingTop="20dp" />

    <Button
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="cube"
        android:id="@+id/cube"
        android:layout_below="@+id/signmul"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9"
        android:layout_above="@+id/signdiv"
        android:onClick="onOperate" />
</RelativeLayout>
